--- a/nbs/experiments/lake_experiment_loader.ipynb
+++ b/nbs/experiments/lake_experiment_loader.ipynb
@@ -22,18 +22,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -56,42 +47,9 @@
     "from text_discovery.lake_experiment import LakeExperiment\n",
     "from tinydb import Query, TinyDB\n",
     "from tinydb.storages import MemoryStorage\n",
-    "from turbodbc.exceptions import DatabaseError"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "MAX_CACHE_SIZE = 32"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "DremioAccess._get_dremio_password = lambda x: os.environ[\"DREMIO_PWD\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Please enter your AD password to connect to Dremio: ··············\n"
-     ]
-    }
-   ],
-   "source": [
-    "dremio_access = DremioAccess()"
+    "from turbodbc.exceptions import DatabaseError\n",
+    "\n",
+    "from sciflow.utils import load_dremio_access"
    ]
   },
   {
@@ -100,6 +58,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "MAX_CACHE_SIZE = 32"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dremio_access = load_dremio_access()\n",
     "bucket_name = \"s3bawspprwe1chatbotunpub01\"\n",
     "project_dir = \"discovery/experiments/lake_test\"\n",
     "experiments_dir = \"discovery/experiments\"\n",
@@ -109,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +260,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: user 0 ns, sys: 0 ns, total: 0 ns\n",
-      "Wall time: 10.5 µs\n"
+      "Wall time: 9.3 µs\n"
      ]
     }
    ],
@@ -302,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,15 +279,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 136 ms, sys: 8 ms, total: 144 ms\n",
-      "Wall time: 1.16 s\n"
+      "CPU times: user 116 ms, sys: 32 ms, total: 148 ms\n",
+      "Wall time: 942 ms\n"
      ]
     }
    ],
@@ -329,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +317,7 @@
       "endLine 1\n",
       "endColumn 36\n",
       "\n",
-      "[Error Id: 500fc1e1-0141-4a97-...[see log]`\n",
+      "[Error Id: 9f4a4b90-5e83-4218-...[see log]`\n",
       "Table not found\n"
      ]
     }
@@ -363,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,20 +350,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "assert len(loader.find_by_key(\"experiment\", \"mainfile\", \"ex_test.py\")) == 3\n",
     "assert loader.find_by_key(\"experiment\", \"mainfile\", \"extest.py\") is None"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
