--- a/nbs/experiment.ipynb
+++ b/nbs/experiment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,72 +28,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "\n",
+    "from nbdev.export import Config\n",
     "from sacred import Experiment\n",
     "from sacred.run import Run\n",
-    "from sacred.observers import S3Observer\n",
-    "\n",
-    "from nbdev.export import Config\n",
     "from sciflow.lake_observer import AWSLakeObserver"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bucket = Config().get('bucket')\n",
+    "bucket = Config().get(\"bucket\")\n",
     "# 's3bawspprwe1chatbotunpub01'\n",
-    "region = 'eu-west-1'\n",
-    "exp_name = 'sacred_sciflow'\n",
-    "lib_name = Config().get('lib_name')"
+    "region = \"eu-west-1\"\n",
+    "exp_name = \"sacred_sciflow\"\n",
+    "lib_name = Config().get(\"lib_name\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "exp = Experiment(exp_name, interactive=True)\n",
-    "obs = AWSLakeObserver(bucket_name=bucket, \n",
-    "                   experiment_dir=f'experiments/{lib_name}/{exp_name}',\n",
-    "                   region=region)\n",
+    "obs = AWSLakeObserver(\n",
+    "    bucket_name=bucket,\n",
+    "    experiment_dir=f\"experiments/{lib_name}/{exp_name}\",\n",
+    "    region=region,\n",
+    ")\n",
     "exp.observers.append(obs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# parameters\n",
     "alpha = 1\n",
-    "input_path = ''\n",
-    "model_path = ''"
+    "input_path = \"\"\n",
+    "model_path = \"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "@exp.config\n",
     "def my_config():\n",
-    "    alpha = 0.1"
+    "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,25 +123,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "@exp.main\n",
     "def my_main(message, _run: Run):\n",
-    "    _run.add_artifact(Path('test/requirements-generated.txt'))\n",
-    "    _run.add_artifact(Path('test/dataframe_artifact.csv'))\n",
-    "    _run.log_scalar('mae', 1.79, 0)\n",
-    "    _run.log_scalar('mae', 3.12, 1)\n",
-    "    _run.log_scalar('another one', 9.12, 0)\n",
+    "    _run.add_artifact(Path(\"test/requirements-generated.txt\"))\n",
+    "    _run.add_artifact(Path(\"test/dataframe_artifact.csv\"))\n",
+    "    _run.log_scalar(\"mae\", 1.79, 0)\n",
+    "    _run.log_scalar(\"mae\", 3.12, 1)\n",
+    "    _run.log_scalar(\"another one\", 9.12, 0)\n",
     "    print(message)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -162,12 +160,12 @@
     }
    ],
    "source": [
-    "run = exp.run(config_updates={'recipient': 'sciflow'})"
+    "run = exp.run(config_updates={\"recipient\": \"sciflow\"})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,11 +183,7 @@
     "\n",
     "    @ex.config\n",
     "    def training_config():\n",
-    "        X_path = None\n",
-    "        y_path = None\n",
-    "        model = None\n",
-    "        train_params = {}\n",
-    "        tags = None\n",
+    "        pass\n",
     "\n",
     "    @ex.capture\n",
     "    def train_eval(X_path, y_path, model, train_params, tags):\n",
@@ -212,6 +206,7 @@
     "\n",
     "    def log_metrics(_run, results):\n",
     "        _run.log_scalar(\"name\", os.environ[\"USER\"])\n",
+    "\n",
     "    return ex\n",
     "\n",
     "\n",
@@ -259,18 +254,6 @@
    "display_name": "Python [conda env:jovyan-discovery]",
    "language": "python",
    "name": "conda-env-jovyan-discovery-py"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.10"
   }
  },
  "nbformat": 4,
