Figured out how to run experiments in metaflow

--- a/nbs/lake_observer.ipynb
+++ b/nbs/lake_observer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,11 +289,12 @@
     "\n",
     "    def log_metrics(self, metrics_by_name, info):\n",
     "        \"\"\"Store new measurements into metrics.csv\"\"\"\n",
-    "        metric_frames = [pd.DataFrame(v) for v in metrics_by_name.values()]\n",
-    "        metrics = pd.concat(metric_frames).reset_index(drop=True)\n",
-    "        metrics[\"experiment_id\"] = self.experiment_id\n",
-    "        metrics_path = f\"s3://{self.bucket_name}/{self.metrics_dir}/metrics.csv\"\n",
-    "        metrics.to_csv(metrics_path, index=False)\n",
+    "        if len(metrics_by_name.values()) > 0:\n",
+    "            metric_frames = [pd.DataFrame(v) for v in metrics_by_name.values()]\n",
+    "            metrics = pd.concat(metric_frames).reset_index(drop=True)\n",
+    "            metrics[\"experiment_id\"] = self.experiment_id\n",
+    "            metrics_path = f\"s3://{self.bucket_name}/{self.metrics_dir}/metrics.csv\"\n",
+    "            metrics.to_csv(metrics_path, index=False)\n",
     "\n",
     "    def __eq__(self, other):\n",
     "        if isinstance(other, AWSLakeObserver):\n",
@@ -307,7 +308,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bucket_name = \"s3bawspprwe1chatbotunpub01\"\n",
+    "test_key_prefix = \"discovery/experiments/test/\"\n",
+    "experiment_dir = f\"{test_key_prefix}lake_observer\"\n",
+    "missing_bucket = \"s3bawspprwe1\"\n",
+    "invalid_bucket = \"some bucket\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,10 +350,10 @@
     "\n",
     "ex = Experiment(\"test-lake-obs\", interactive=True)\n",
     "\n",
-    "test_key_prefix = \"discovery/experiments/test/\"\n",
+    "\n",
     "obs = AWSLakeObserver(\n",
     "    bucket_name=\"s3bawspprwe1chatbotunpub01\",\n",
-    "    experiment_dir=f\"{test_key_prefix}lake_observer\",\n",
+    "    experiment_dir=experiment_dir,\n",
     "    region=\"eu-west-1\",\n",
     ")\n",
     "\n",
@@ -349,13 +363,13 @@
     "@ex.config\n",
     "def my_config():\n",
     "    recipient = \"test\"\n",
-    "    \"Hello %s!\" % recipient\n",
+    "    message = \"Hello %s!\" % recipient\n",
     "\n",
     "\n",
     "@ex.main\n",
     "def my_main(message, _run: Run):\n",
-    "    _run.add_artifact(\"data/requirements.txt\")\n",
-    "    _run.add_artifact(\"data/dataframe_artifact.csv\")\n",
+    "    _run.add_artifact(\"test/requirements-generated.txt\")\n",
+    "    _run.add_artifact(\"test/dataframe_artifact.csv\")\n",
     "    _run.log_scalar(\"rsme\", 1.79, 0)\n",
     "    _run.log_scalar(\"another one\", 9.12, 0)\n",
     "    print(message)"
@@ -363,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -371,8 +385,21 @@
      "output_type": "stream",
      "text": [
       "INFO:test-lake-obs:Running command 'my_main'\n",
-      "INFO:test-lake-obs:Started run with ID \"3\"\n",
-      "INFO:test-lake-obs:Completed after 0:00:00\n"
+      "INFO:test-lake-obs:Started run with ID \"5\"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'test-lake-obs', 'base_dir': '/home/jovyan/git/sciflow/nbs', 'sources': [], 'dependencies': ['boto3==1.16.48', 'ipykernel==5.3.4', 'ipython==7.19.0', 'metaflow==2.2.7', 'newday-nexus-data-access==0.6.4', 'numpy==1.19.2', 'pandas==0.25.3', 'sacred==0.8.2', 'text-discovery==0.0.1'], 'repositories': [], 'mainfile': None}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:test-lake-obs:Completed after 0:00:01\n"
      ]
     },
     {
@@ -385,10 +412,76 @@
     {
      "data": {
       "text/plain": [
-       "<sacred.run.Run at 0x7fa9b7ed82d0>"
+       "<sacred.run.Run at 0x7f936ada30d0>"
       ]
      },
-     "execution_count": null,
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ex.run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ex = Experiment(\"test-empty\", interactive=True)\n",
+    "\n",
+    "\n",
+    "obs = AWSLakeObserver(\n",
+    "    bucket_name=\"s3bawspprwe1chatbotunpub01\",\n",
+    "    experiment_dir=f\"{test_key_prefix}test_empty\",\n",
+    "    region=\"eu-west-1\",\n",
+    ")\n",
+    "\n",
+    "ex.observers.append(obs)\n",
+    "\n",
+    "\n",
+    "@ex.config\n",
+    "def my_config():\n",
+    "    recipient = \"test\"\n",
+    "    message = \"Hello %s!\" % recipient\n",
+    "\n",
+    "\n",
+    "@ex.main\n",
+    "def my_main(message, _run: Run):\n",
+    "    print(message)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:test-empty:Running command 'my_main'\n",
+      "INFO:test-empty:Started run with ID \"4\"\n",
+      "INFO:test-empty:Completed after 0:00:00\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello test!\n",
+      "log_metrics: {}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<sacred.run.Run at 0x7f936b25a190>"
+      ]
+     },
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,6 +594,62 @@
     "        AWSLakeObserver(bucket_name=bucket_name, experiment_dir=experiment_dir)\n",
     "    )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Flow('TestModuleFlow'), Flow('TestTop2VecFlow'), Flow('TestExportFlow'), Flow('TestDataHandlingFlow')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "os.environ['USER']  = 'e02079'\n",
+    "from metaflow import Metaflow, Flow\n",
+    "print(Metaflow().flows)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flow = Flow('TestTop2VecFlow/5')\n",
+    "runs = list(flow)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Flow('TestTop2VecFlow/TestTop2VecFlow')"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -508,6 +657,18 @@
    "display_name": "Python [conda env:jovyan-discovery]",
    "language": "python",
    "name": "conda-env-jovyan-discovery-py"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
