--- a/nbs/lake_experiment_loader.ipynb
+++ b/nbs/lake_experiment_loader.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,21 +61,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "dremio_access = load_dremio_access()\n",
     "bucket_name = \"s3bawspprwe1chatbotunpub01\"\n",
-    "project_dir = \"discovery/experiments/lake_test\"\n",
-    "experiments_dir = \"discovery/experiments\"\n",
-    "experiment_name = \"lake_test\"\n",
-    "table_context = '\"chatbot_unpublish_s3\".discovery.experiments'"
+    "project_dir = \"discovery/experiments/test\"\n",
+    "experiments_dir = \"discovery/experiments/test\"\n",
+    "experiment_name = \"lake_observer\"\n",
+    "table_context = '\"chatbot_unpublish_s3\".discovery.experiments.test'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,12 +202,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "ex1 = loader.find_by_id(1)\n",
-    "assert len(ex1.metrics) == 3\n",
+    "assert len(ex1.metrics) == 2\n",
     "assert type(ex1.metrics) == pd.DataFrame\n",
     "assert len(ex1.artifacts.values()) == 2\n",
     "assert all([type(art) == CSVArtifact for art in ex1.artifacts.values()])"
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,27 +230,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert [int(ex.experiment_id) for ex in loader.find_latest()] == [3, 2, 1]\n",
-    "assert [int(ex.experiment_id) for ex in loader.find_latest(n=2)] == [3, 2]"
+    "assert [int(ex.experiment_id) for ex in loader.find_latest()] == [5, 4, 3, 2, 1]\n",
+    "assert [int(ex.experiment_id) for ex in loader.find_latest(n=2)] == [5, 4]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert len(loader.find_all()) == 3\n",
-    "assert sorted([int(ex.experiment_id) for ex in loader.find_all()]) == [1, 2, 3]"
+    "assert len(loader.find_all()) == 5\n",
+    "assert sorted([int(ex.experiment_id) for ex in loader.find_all()]) == [1, 2, 3, 4, 5]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -263,12 +263,12 @@
     }
    ],
    "source": [
-    "%time assert len(loader.find_all()) == 3"
+    "%time assert len(loader.find_all()) == 5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,25 +277,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 116 ms, sys: 32 ms, total: 148 ms\n",
-      "Wall time: 942 ms\n"
+      "CPU times: user 264 ms, sys: 20 ms, total: 284 ms\n",
+      "Wall time: 1.67 s\n"
      ]
     }
    ],
    "source": [
-    "%time assert len(loader.find_all()) == 3"
+    "%time assert len(loader.find_all()) == 5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -305,17 +305,17 @@
       "ERROR IS: `ODBC error\n",
       "state: HY000\n",
       "native error code: 1040\n",
-      "message: [Dremio][Connector] (1040) Dremio failed to execute the query: select * from \"chatbot_unpublish_s3\".discovery.experiments.laketest.runs\n",
+      "message: [Dremio][Connector] (1040) Dremio failed to execute the query: select * from \"chatbot_unpublish_s3\".discovery.experiments.test.laketest.runs\n",
       "[30038]Query execution error. Details:[ \n",
-      "VALIDATION ERROR: Table 'chatbot_unpublish_s3.discovery.experiments.laketest.runs' not found\n",
+      "VALIDATION ERROR: Table 'chatbot_unpublish_s3.discovery.experiments.test.laketest.runs' not found\n",
       "\n",
-      "SQL Query select * from \"chatbot_unpublish_s3\".discovery.experiments.laketest.runs\n",
+      "SQL Query select * from \"chatbot_unpublish_s3\".discovery.experiments.test.laketest.runs\n",
       "startLine 1\n",
       "startColumn 15\n",
       "endLine 1\n",
       "endColumn 36\n",
       "\n",
-      "[Error Id: 9f4a4b90-5e83-4218-...[see log]`\n",
+      "[Error Id: 4fb2...[see log]`\n",
       "Table not found\n"
      ]
     }
@@ -329,30 +329,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert len(loader.find_by_name(\"lake_test\")) == 3"
+    "assert len(loader.find_by_name(\"lake_observer\")) == 5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert len(loader.find_by_config_key(\"recipient\", \"world\")) == 3\n",
+    "assert len(loader.find_by_config_key(\"recipient\", \"test\")) == 5\n",
     "assert loader.find_by_config_key(\"recipient\", \"hello\") is None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert len(loader.find_by_key(\"experiment\", \"mainfile\", \"ex_test.py\")) == 3\n",
+    "assert len(loader.find_by_key(\"experiment\", \"name\", \"test-lake-obs\")) == 5\n",
     "assert loader.find_by_key(\"experiment\", \"mainfile\", \"extest.py\") is None"
    ]
   }
@@ -362,6 +362,18 @@
    "display_name": "Python [conda env:jovyan-discovery]",
    "language": "python",
    "name": "conda-env-jovyan-discovery-py"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
