Added experiment generation

--- a/nbs/metaflow.ipynb
+++ b/nbs/metaflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,14 +109,12 @@
     "def rename_steps_for_metaflow(steps):\n",
     "    for i, step in enumerate(steps):\n",
     "        if i == 0:\n",
-    "            step.name = \"start\"\n",
-    "        if i == len(steps) - 1:\n",
-    "            step.name = \"end\""
+    "            step.name = \"start\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,18 +133,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
     "assert [\"first\", \"preprocess\", \"train\", \"last\"] == [step.name for step in steps]\n",
     "rename_steps_for_metaflow(steps)\n",
-    "assert [\"start\", \"preprocess\", \"train\", \"end\"] == [step.name for step in steps]"
+    "assert [\"start\", \"preprocess\", \"train\", \"last\"] == [step.name for step in steps]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,11 +184,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
-    "nb_path = Path(os.path.join(\"test\", \"test_top2vec.ipynb\"))\n",
+    "nb_path = Path(os.path.join(\"test\", \"test_clustering.ipynb\"))\n",
     "nb = read_nb(nb_path)\n",
     "module_name = find_default_export(nb[\"cells\"]).replace(\".\", \"/\")\n",
     "test_module = os.path.join(Config().path(\"lib_path\"), f\"{module_name}.py\")\n",
@@ -199,14 +197,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
     "# export\n",
     "\n",
     "\n",
-    "def nb_to_metaflow(nb_path: Path, flow_path: Path, silent=True):\n",
+    "def nb_to_metaflow(nb_path: Path, flow_path: Path, silent=True, track_experiment=True):\n",
     "    nb = read_nb(nb_path)\n",
     "    lib_name = Config().lib_name\n",
     "    module_name = find_default_export(nb[\"cells\"])\n",
@@ -237,6 +235,7 @@
     "        orig_step_names,\n",
     "        steps,\n",
     "        params,\n",
+    "        track_experiment\n",
     "    )\n",
     "    if not silent:\n",
     "        print(\n",
@@ -246,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,16 +297,19 @@
     "    orig_step_names: Iterable[str],\n",
     "    steps: Iterable[FuncDetails],\n",
     "    params: dict,\n",
+    "    track_experiment: bool\n",
     "):\n",
     "    if not os.path.exists(flow_path.parent):\n",
     "        os.mkdir(flow_path.parent)\n",
     "    fq_module_name = f\"{lib_name}.{module_name}\"\n",
     "    param_meta = extract_param_meta(fq_module_name, params)\n",
     "    with open(flow_path, \"w\") as flow_file:\n",
-    "        flow_file.write(\"# SCIFLOW GENERATED FILE - DO NOT EDIT\\n\")\n",
+    "        flow_file.write(\"#!/usr/bin/env python\")\n",
+    "        flow_file.write(\"# coding=utf-8\")\n",
+    "        flow_file.write(\"# SCIFLOW GENERATED FILE - EDIT COMPANION NOTEBOOK\\n\")\n",
     "        has_mf_param = any((p.has_metaflow_param for p in param_meta.values()))\n",
     "        has_json_param = any((p.is_json_type for p in param_meta.values()))\n",
-    "        mf_params_import = \"from metaflow import FlowSpec, step\"\n",
+    "        mf_params_import = \"from metaflow import FlowSpec, step, current\"\n",
     "        if has_mf_param:\n",
     "            mf_params_import += \", Parameter\"\n",
     "        if has_json_param:\n",
@@ -316,20 +318,95 @@
     "        flow_file.write(mf_params_import + \"\\n\")\n",
     "        flow_file.write(f\"from {fq_module_name} import {', '.join(orig_step_names)}\\n\")\n",
     "        flow_file.write(f\"from {fq_module_name} import {', '.join(params.keys())}\\n\")\n",
+    "        \n",
+    "        if track_experiment:\n",
+    "            flow_file.write(\"from sacred import Experiment\\n\")\n",
+    "            flow_file.write(\"from sciflow.lake_observer import AWSLakeObserver\\n\")\n",
+    "            flow_file.write(\"import time\")\n",
+    "            write_observers(flow_file, module_name, Config().bucket, Config().lib_name)\n",
+    "            \n",
     "        flow_file.write(f\"\\n\\nclass {flow_class_name}(FlowSpec):\\n\")\n",
     "        single_indent = \"    \"\n",
     "        write_params(flow_file, param_meta, single_indent)\n",
-    "\n",
+    "        flow_file.write(f\"{single_indent}artifacts = []\\n\")\n",
+    "        flow_file.write(f\"{single_indent}metrics = []\\n\")\n",
     "        flow_file.write(\"\\n\")\n",
     "        write_steps(flow_file, steps, orig_step_names, param_meta, single_indent)\n",
-    "\n",
+    "        if track_experiment:\n",
+    "            write_track_flow(flow_file)\n",
+    "        flow_file.write(\"\\n\")\n",
+    "        \n",
     "        flow_file.write('if __name__ == \"__main__\":\\n')\n",
     "        flow_file.write(f\"{single_indent}{flow_class_name}()\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 188,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def write_observers(flow_file, module_name, bucket_name, project):\n",
+    "    experiment_name = extract_module_only(module_name)\n",
+    "    sacred_setup = f\"\"\"\n",
+    "\n",
+    "ex = Experiment(\"{experiment_name}\")\n",
+    "# TODO inject observers\n",
+    "obs = AWSLakeObserver(\n",
+    "    bucket_name=\"{bucket_name}\",\n",
+    "    experiment_dir=\"experiments/{project}/{experiment_name}\",\n",
+    "    region=\"eu-west-1\",\n",
+    ")\n",
+    "ex.observers.append(obs)\n",
+    "\n",
+    "@ex.config\n",
+    "def config():\n",
+    "    flow_run_id = None\n",
+    "    metrics = []\n",
+    "    artifacts = []\n",
+    "    \"\"\"\n",
+    "    flow_file.write(sacred_setup)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def write_track_flow(flow_file):\n",
+    "    track_flow = \"\"\"\n",
+    "    @step\n",
+    "    def end(self):\n",
+    "        flow_info = {\n",
+    "            \"flow_name\": current.flow_name,\n",
+    "            \"run id\": current.run_id,\n",
+    "            \"origin run id\": current.origin_run_id,\n",
+    "            \"pathspec\": current.pathspec,\n",
+    "            \"namespace\": current.namespace,\n",
+    "            \"username\": current.username,\n",
+    "            \"flow parameters\": str(current.parameter_names),\n",
+    "            \"run_time_mins\": (time.time() - self.start_time) / 60.0\n",
+    "        }\n",
+    "        \n",
+    "        run = ex.run(config_updates={'flow_run_id': current.run_id,\n",
+    "                                    'artifacts': self.artifacts,\n",
+    "                                    'metrics': self.metrics},\n",
+    "                     meta_info = flow_info)\n",
+    "        \n",
+    "    @ex.main\n",
+    "    def track_flow(artifacts, metrics, _run):\n",
+    "        for artifact in artifacts:\n",
+    "            _run.add_artifact(artifact)\n",
+    "        for metric_name, metric_value, step in metrics:\n",
+    "            _run.log_scalar(metric_name, metric_value, step)\n",
+    "    \"\"\"\n",
+    "    flow_file.write(track_flow)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,16 +503,21 @@
     "                )\n",
     "        else:\n",
     "            flow_file.write(f\"{single_indent}{single_indent}pass\\n\")\n",
-    "        if i < len(steps) - 1:\n",
+    "        if i == 0:\n",
     "            flow_file.write(\n",
-    "                f\"{single_indent}{single_indent}self.next(self.{steps[i+1].name})\\n\"\n",
+    "                f\"{single_indent}{single_indent}self.start_time = time.time()\\n\"\n",
+    "            )\n",
+    "        if i < len(steps):\n",
+    "            next_step = \"end\" if i == len(steps)-1 else steps[i+1].name\n",
+    "            flow_file.write(\n",
+    "                f\"{single_indent}{single_indent}self.next(self.{next_step})\\n\"\n",
     "            )\n",
     "        flow_file.write(\"\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +571,7 @@
     }
    ],
    "source": [
-    "nb_to_metaflow(nb_path, flow_path, silent=False)"
+    "nb_to_metaflow(nb_path, flow_path, silent=False, track_experiment=True)"
    ]
   },
   {
@@ -719,6 +801,18 @@
    "display_name": "Python [conda env:jovyan-discovery]",
    "language": "python",
    "name": "conda-env-jovyan-discovery-py"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
