--- a/nbs/lake_observer.ipynb
+++ b/nbs/lake_observer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,9 +24,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -34,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,20 +317,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
     "bucket_name = \"s3bawspprwe1chatbotunpub01\"\n",
     "test_key_prefix = \"discovery/experiments/test/\"\n",
-    "experiment_dir = f\"{test_key_prefix}lake_observer\"\n",
+    "experiment_dir = f\"{test_key_prefix}observer_test\"\n",
     "missing_bucket = \"s3bawspprwe1\"\n",
     "invalid_bucket = \"some bucket\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -385,21 +394,8 @@
      "output_type": "stream",
      "text": [
       "INFO:test-lake-obs:Running command 'my_main'\n",
-      "INFO:test-lake-obs:Started run with ID \"5\"\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'name': 'test-lake-obs', 'base_dir': '/home/jovyan/git/sciflow/nbs', 'sources': [], 'dependencies': ['boto3==1.16.48', 'ipykernel==5.3.4', 'ipython==7.19.0', 'metaflow==2.2.7', 'newday-nexus-data-access==0.6.4', 'numpy==1.19.2', 'pandas==0.25.3', 'sacred==0.8.2', 'text-discovery==0.0.1'], 'repositories': [], 'mainfile': None}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:test-lake-obs:Completed after 0:00:01\n"
+      "INFO:test-lake-obs:Started run with ID \"5\"\n",
+      "INFO:test-lake-obs:Completed after 0:00:00\n"
      ]
     },
     {
@@ -412,10 +408,10 @@
     {
      "data": {
       "text/plain": [
-       "<sacred.run.Run at 0x7f936ada30d0>"
+       "<sacred.run.Run at 0x7f936ab3bd10>"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +459,7 @@
      "output_type": "stream",
      "text": [
       "INFO:test-empty:Running command 'my_main'\n",
-      "INFO:test-empty:Started run with ID \"4\"\n",
+      "INFO:test-empty:Started run with ID \"1\"\n",
       "INFO:test-empty:Completed after 0:00:00\n"
      ]
     },
@@ -471,17 +467,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello test!\n",
-      "log_metrics: {}\n"
+      "Hello test!\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<sacred.run.Run at 0x7f936b25a190>"
+       "<sacred.run.Run at 0x7f936aae7090>"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,86 +487,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import boto3\n",
-    "\n",
-    "s3_res = boto3.resource(\"s3\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'ResponseMetadata': {'RequestId': 'XZ67G2706K98PZBY',\n",
-       "   'HostId': 'Fut0qvcoUC0sX3zr8KwMSCbC+U888m4OCB4xmSfKg/s3WNjqVN88JiXoCQJio8obkRxAgFyUx8M=',\n",
-       "   'HTTPStatusCode': 200,\n",
-       "   'HTTPHeaders': {'x-amz-id-2': 'Fut0qvcoUC0sX3zr8KwMSCbC+U888m4OCB4xmSfKg/s3WNjqVN88JiXoCQJio8obkRxAgFyUx8M=',\n",
-       "    'x-amz-request-id': 'XZ67G2706K98PZBY',\n",
-       "    'date': 'Sun, 14 Mar 2021 10:58:34 GMT',\n",
-       "    'content-type': 'application/xml',\n",
-       "    'transfer-encoding': 'chunked',\n",
-       "    'server': 'AmazonS3',\n",
-       "    'connection': 'close'},\n",
-       "   'RetryAttempts': 0},\n",
-       "  'Deleted': [{'Key': 'discovery/experiments/test/lake_observer/runs/2/run.json',\n",
-       "    'DeleteMarker': True,\n",
-       "    'DeleteMarkerVersionId': '7pMG_ItD3yJzjSQBd3KASyOkCRoZUXsd'},\n",
-       "   {'Key': 'discovery/experiments/test/lake_observer/artifacts/1/requirements.txt',\n",
-       "    'DeleteMarker': True,\n",
-       "    'DeleteMarkerVersionId': 'k4oizgXkkiiji1JnzoHPruXuVtfLeEP.'},\n",
-       "   {'Key': 'discovery/experiments/test/lake_observer/metrics/1/metrics.csv',\n",
-       "    'DeleteMarker': True,\n",
-       "    'DeleteMarkerVersionId': 'OfVLGia.FqTwSBqQHJQApBku2ubiYQmd'},\n",
-       "   {'Key': 'discovery/experiments/test/lake_observer/artifacts/3/dataframe_artifact.csv',\n",
-       "    'DeleteMarker': True,\n",
-       "    'DeleteMarkerVersionId': 'D78goL66SAUlpGguPp2pVZjzVKMcJS0w'},\n",
-       "   {'Key': 'discovery/experiments/test/lake_observer/artifacts/1/dataframe_artifact.csv',\n",
-       "    'DeleteMarker': True,\n",
-       "    'DeleteMarkerVersionId': 'qmQ939tvJlTneaw0DIg52ge33ErdwhMv'},\n",
-       "   {'Key': 'discovery/experiments/test/lake_observer/runs/3/run.json',\n",
-       "    'DeleteMarker': True,\n",
-       "    'DeleteMarkerVersionId': 'Iqw7OMIQnYYK6.vskG8RTZDimfZZG4Sf'},\n",
-       "   {'Key': 'discovery/experiments/test/lake_observer/artifacts/3/requirements.txt',\n",
-       "    'DeleteMarker': True,\n",
-       "    'DeleteMarkerVersionId': 'MBiVElukMCiSxozTGAAoKjI15Zl9RX.T'},\n",
-       "   {'Key': 'discovery/experiments/test/lake_observer/metrics/3/metrics.csv',\n",
-       "    'DeleteMarker': True,\n",
-       "    'DeleteMarkerVersionId': '7lbH9EXqb4dMu5RCrK.M5OYLNYgVAVNI'},\n",
-       "   {'Key': 'discovery/experiments/test/lake_observer/artifacts/2/dataframe_artifact.csv',\n",
-       "    'DeleteMarker': True,\n",
-       "    'DeleteMarkerVersionId': 'SB7RHppk25tJI7oRCnJqbdGIdweAglNx'},\n",
-       "   {'Key': 'discovery/experiments/test/lake_observer/metrics/2/metrics.csv',\n",
-       "    'DeleteMarker': True,\n",
-       "    'DeleteMarkerVersionId': '1L9kY589q6F3sRKmFnc.2MO_rKd4o_c1'},\n",
-       "   {'Key': 'discovery/experiments/test/lake_observer/runs/1/run.json',\n",
-       "    'DeleteMarker': True,\n",
-       "    'DeleteMarkerVersionId': 'QNjtoFWMSPUZHJt56BTYu3BMLpk11xO1'},\n",
-       "   {'Key': 'discovery/experiments/test/lake_observer/artifacts/2/requirements.txt',\n",
-       "    'DeleteMarker': True,\n",
-       "    'DeleteMarkerVersionId': '0aYH36k2yhW7Pt.k8TL0AC.eIEflkQ23'}]}]"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "# delete_dir doesn't seem to always work.. why not?\n",
-    "bucket = s3_res.Bucket(bucket_name)\n",
-    "bucket.objects.filter(Prefix=test_key_prefix).delete()"
+    "#import boto3\n",
+    "\n",
+    "#s3_res = boto3.resource(\"s3\")\n",
+    "#bucket = s3_res.Bucket(bucket_name)\n",
+    "#bucket.objects.filter(Prefix=test_key_prefix).delete()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -594,62 +524,6 @@
     "        AWSLakeObserver(bucket_name=bucket_name, experiment_dir=experiment_dir)\n",
     "    )"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[Flow('TestModuleFlow'), Flow('TestTop2VecFlow'), Flow('TestExportFlow'), Flow('TestDataHandlingFlow')]\n"
-     ]
-    }
-   ],
-   "source": [
-    "os.environ['USER']  = 'e02079'\n",
-    "from metaflow import Metaflow, Flow\n",
-    "print(Metaflow().flows)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "flow = Flow('TestTop2VecFlow/5')\n",
-    "runs = list(flow)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Flow('TestTop2VecFlow/TestTop2VecFlow')"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "flow"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
