WIP added initial artifacts/metrics soln

--- a/nbs/params.ipynb
+++ b/nbs/params.ipynb
@@ -195,7 +195,9 @@
    ],
    "source": [
     "with_params = os.path.join(Path(\".\").resolve(), \"test\", \"test_clustering.ipynb\")\n",
-    "without_params = os.path.join(Path(\".\").resolve(), \"test\", \"test_clustering_no_params.ipynb\")\n",
+    "without_params = os.path.join(\n",
+    "    Path(\".\").resolve(), \"test\", \"test_clustering_no_params.ipynb\"\n",
+    ")\n",
     "\n",
     "add_missing_params_cell(with_params, False)\n",
     "assert len(find_params_cell(read_nb(without_params))) == 0\n",
