--- a/nbs/metaflow.ipynb
+++ b/nbs/metaflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,18 +46,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -65,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +226,7 @@
     "        orig_step_names,\n",
     "        steps,\n",
     "        params,\n",
-    "        track_experiment\n",
+    "        track_experiment,\n",
     "    )\n",
     "    if not silent:\n",
     "        print(\n",
@@ -245,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +288,7 @@
     "    orig_step_names: Iterable[str],\n",
     "    steps: Iterable[FuncDetails],\n",
     "    params: dict,\n",
-    "    track_experiment: bool\n",
+    "    track_experiment: bool,\n",
     "):\n",
     "    if not os.path.exists(flow_path.parent):\n",
     "        os.mkdir(flow_path.parent)\n",
@@ -318,13 +309,13 @@
     "        flow_file.write(mf_params_import + \"\\n\")\n",
     "        flow_file.write(f\"from {fq_module_name} import {', '.join(orig_step_names)}\\n\")\n",
     "        flow_file.write(f\"from {fq_module_name} import {', '.join(params.keys())}\\n\")\n",
-    "        \n",
+    "\n",
     "        if track_experiment:\n",
     "            flow_file.write(\"from sacred import Experiment\\n\")\n",
     "            flow_file.write(\"from sciflow.lake_observer import AWSLakeObserver\\n\")\n",
     "            flow_file.write(\"import time\")\n",
     "            write_observers(flow_file, module_name, Config().bucket, Config().lib_name)\n",
-    "            \n",
+    "\n",
     "        flow_file.write(f\"\\n\\nclass {flow_class_name}(FlowSpec):\\n\")\n",
     "        single_indent = \"    \"\n",
     "        write_params(flow_file, param_meta, single_indent)\n",
@@ -335,17 +326,20 @@
     "        if track_experiment:\n",
     "            write_track_flow(flow_file)\n",
     "        flow_file.write(\"\\n\")\n",
-    "        \n",
+    "\n",
     "        flow_file.write('if __name__ == \"__main__\":\\n')\n",
     "        flow_file.write(f\"{single_indent}{flow_class_name}()\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# export\n",
+    "\n",
+    "\n",
     "def write_observers(flow_file, module_name, bucket_name, project):\n",
     "    experiment_name = extract_module_only(module_name)\n",
     "    sacred_setup = f\"\"\"\n",
@@ -370,10 +364,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# export\n",
+    "\n",
+    "\n",
     "def write_track_flow(flow_file):\n",
     "    track_flow = \"\"\"\n",
     "    @step\n",
@@ -406,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,6 +498,7 @@
     "                flow_file.write(\n",
     "                    f\"{single_indent}{single_indent}self.{step.return_stmt} = {orig_step_names[i]}({flow_step_args})\\n\"\n",
     "                )\n",
+    "                write_track_capture(flow_file, step.return_stmt)\n",
     "        else:\n",
     "            flow_file.write(f\"{single_indent}{single_indent}pass\\n\")\n",
     "        if i == 0:\n",
@@ -508,7 +506,7 @@
     "                f\"{single_indent}{single_indent}self.start_time = time.time()\\n\"\n",
     "            )\n",
     "        if i < len(steps):\n",
-    "            next_step = \"end\" if i == len(steps)-1 else steps[i+1].name\n",
+    "            next_step = \"end\" if i == len(steps) - 1 else steps[i + 1].name\n",
     "            flow_file.write(\n",
     "                f\"{single_indent}{single_indent}self.next(self.{next_step})\\n\"\n",
     "            )\n",
@@ -517,7 +515,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "\n",
+    "def write_track_capture(flow_file, return_var):\n",
+    "    flow_file.write(f\"\"\"\n",
+    "        if self.{return_var}:\n",
+    "            if \"artifacts\" in {return_var}:\n",
+    "                self.artifacts = self.artifacts + {return_var}['artifacts']\n",
+    "            if \"metrics\" in {return_var}:\n",
+    "                self.metrics = self.metrics + {return_var}['metrics']\n",
+    "\n",
+    "\"\"\"\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
